add description field to amp, fix #20
